--- a/11. WORKSHOPS/01. Workshop-Landing-Page/index.html
+++ b/11. WORKSHOPS/01. Workshop-Landing-Page/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-<nav>
+<nav class="nav">
     <div>
         <i class="fas fa-angle-right"></i>
         <img src="images/software-university-logo.png" alt="softuni-logo">
@@ -52,7 +52,7 @@
     </div>
 </nav>
 
-<main>
+<main class="content">
     <section class="education">
         <article>
             <div class="box-head">
@@ -252,6 +252,7 @@
 <script src="./lib/jquery.datetimepicker.full.min.js"></script>
 <script src="./lib/jquery-sakura.min.js"></script>
 <script src="./lib/notify.js"></script>
+<script src="./lib/stickyMenu.js"></script>
 
 <script src="./scripts/pluginsBundler.js"></script>
 <script src="./scripts/app.js"></script>
