Begin refactoring of previous course softUni wizards workshop

--- a/11. WORKSHOPS/02. Softuni-Wizard/src/index.html
+++ b/11. WORKSHOPS/02. Softuni-Wizard/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Softuni Wizard</title>
+    <title>SoftUni Wizard</title>
 </head>
 <body>
     <div class="game-section">
@@ -65,6 +65,8 @@
             window.requestAnimationFrame(gameAction);
         }
 
+        //timestamp is send by window.requestAnimationFrame
+        //Game Loop
         function gameAction(timestamp) {
             const wizard = document.querySelector('.wizard');
 
