--- a/11. WORKSHOPS/03. Movies SPA/index.html
+++ b/11. WORKSHOPS/03. Movies SPA/index.html
@@ -28,27 +28,6 @@
         <!-- Dynamic content goes here -->
         <div id="app"></div>
         
-
-        <!-- 
-
-
-        <form class="text-center border border-light p-5" action="#" method="">
-            <h1>Edit Movie</h1>
-            <div class="form-group">
-                <label for="title">Movie Title</label>
-                <input type="text" class="form-control" placeholder="Movie Title" value="" name="title">
-            </div>
-            <div class="form-group">
-                <label for="description">Movie Description</label>
-                <textarea class="form-control" placeholder="Movie Description..." name="description"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="imageUrl">Image url</label>
-                <input type="text" class="form-control" placeholder="Image Url" value="" name="imageUrl">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form> -->
-
         <footer class="page-footer font-small">
             <div class="footer-copyright text-center py-3">© 2020
                 <a href="https://softuni.bg/trainings/2840/js-applications-june-2020/internal" class="text-dark">JS Applications</a>
@@ -200,13 +179,37 @@
                 <div class="col-md-4 text-center">
                     <h3 class="my-3 ">Movie Description</h3>
                     <p>{{description}}</p>
-                    <a class="btn btn-danger" href="#">Delete</a>
-                    <a class="btn btn-warning" href="#">Edit</a>
-                    <a class="btn btn-primary" href="#">Like</a>
-                    <span class="enrolled-span">Liked 1</span>
+                    {{#if ownerId}}
+                        <a class="btn btn-danger" href="#">Delete</a>
+                        <a class="btn btn-warning handler" href="edit/{{key}}" onclick="navigateHandler(event)">Edit</a>
+                    {{else}}
+                        <a class="btn btn-primary" href="#">Like</a>
+                        <span class="enrolled-span">Liked 1</span>
+                    {{/if}}
                 </div>
             </div>
         </div>
+    </script>
+
+    <script type="text/x-handlebars-template" id='edit-movie-template'>
+        {{>navigation-template}}
+        <form id="edit-movie-form" class="text-center border border-light p-5" onsubmit=onEditMovieSubmit(event)>
+            <h1>Edit Movie</h1>
+            <div class="form-group">
+                <label for="title">Movie Title</label>
+                <input type="text" class="form-control" placeholder="Movie Title" value="{{title}}" name="title">
+            </div>
+            <div class="form-group">
+                <label for="description">Movie Description</label>
+                <textarea class="form-control" placeholder="Movie Description..." name="description">{{description}}</textarea>
+            </div>
+            <div class="form-group">
+                <label for="imageUrl">Image url</label>
+                <input type="text" class="form-control" placeholder="Image Url" value="{{imageUrl}}" name="imageUrl">
+            </div>
+            <input type="hidden" name="movieId" id="movieId" value="{{key}}">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </script>
 
 </body>
