Loading puzzles from JSON

--- a/11. WORKSHOPS/04. Sudoku/index.html
+++ b/11. WORKSHOPS/04. Sudoku/index.html
@@ -13,7 +13,7 @@
     <section id="panel">
         <span id="timer">00:00:00</span>
         <button id="pauseBtn">Pause</button>
-        <button id="checkBtn">Check!</button>
+        <button id="checkBtn" class="check-btn">Check!</button>
         <button id="loadBtn">Load</button>
     </section>
 </body>
