--- a/11. WORKSHOPS/04. Sudoku/index.html
+++ b/11. WORKSHOPS/04. Sudoku/index.html
@@ -14,7 +14,7 @@
         <span id="timer">00:00:00</span>
         <button id="pauseBtn">Pause</button>
         <button id="checkBtn" class="check-btn">Check!</button>
-        <button id="loadBtn">Load</button>
+        <button id="loadBtn">Start</button>
     </section>
 </body>
 </html>
